force-app/main/default/objects/blng__Invoice__c/fields/Lien_Paiement_CDN__c.field-meta.xml
<CustomField>
    <fullName>Lien_Paiement_CDN__c</fullName>
    <label>Lien Paiement CDN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>