force-app/main/default/objects/blng__Invoice__c/fields/Payment_Order_Id_CDN__c.field-meta.xml
<CustomField>
    <fullName>Payment_Order_Id_CDN__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Payment Order Id CDN</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>