force-app/main/default/objects/blng__Invoice__c/fields/Statut_Banque_CDN__c.field-meta.xml
<CustomField>
    <fullName>Statut_Banque_CDN__c</fullName>
    <label>Statut Banque CDN</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Bank_Status</valueSetName>
    </valueSet>
</CustomField>