force-app/main/default/objects/blng__Invoice__c/fields/TECH_NombreClicsOrderPaytweak__c.field-meta.xml
<CustomField>
    <fullName>TECH_NombreClicsOrderPaytweak__c</fullName>
    <label>TECH Nombre de Clics Order Paytweak</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>